--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Spring Security
 spring.security.user.password=senha-segura
+logging.level.org.springframework.security=DEBUG
