--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.transaction.flush_before_completion=true
+spring.jpa.properties.hibernate.connection.handling_mode=DELAYED_ACQUISITION_AND_HOLD
 
 # Thymeleaf
 spring.thymeleaf.cache=false
@@ -27,3 +29,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Spring Security
 spring.security.user.password=admin
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
