Update email configuration to use Mailgun SMTP settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,19 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
-# Email
-spring.mail.host=smtp.gmail.com
+## Email
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=projetointegradorifsc2025@gmail.com
+#spring.mail.password=dsvqizxtyacpdrws
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Mailgun SMTP
+spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
-spring.mail.username=projetointegradorifsc2025@gmail.com
+spring.mail.username=ifsc.edu@sandbox833cb41ddb1a4df8b2e219bd2bdf6d94.mailgun.org
 spring.mail.password=dsvqizxtyacpdrws
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Spring Security
 spring.security.user.password=admin
