Refactor email service to use Sendinblue API and update configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,16 +19,19 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
 ## Email
-spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
-spring.mail.username=${BREVO_USERNAME}
-spring.mail.password=${BREVO_SMTP_KEY}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=10000
-spring.mail.properties.mail.smtp.timeout=10000
-spring.mail.properties.mail.smtp.writetimeout=10000
+#spring.mail.host=smtp-relay.brevo.com
+#spring.mail.port=587
+#spring.mail.username=${BREVO_USERNAME}
+#spring.mail.password=${BREVO_SMTP_KEY}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=10000
+#spring.mail.properties.mail.smtp.timeout=10000
+#spring.mail.properties.mail.smtp.writetimeout=10000
+brevo.api.key=${BREVO_API_KEY}
+brevo.sender.email=jalmir.w15@aluno.ifsc.edu.br
+brevo.sender.name=Domino Time
 
 # Spring Security
 spring.security.user.password=admin
