Refactor email service to use Sendinblue API and update configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.thymeleaf.encoding=UTF-8
 #spring.mail.properties.mail.smtp.writetimeout=10000
 brevo.api.key=${BREVO_API_KEY}
 brevo.sender.email=jalmir.w15@aluno.ifsc.edu.br
-brevo.sender.name=Domino Time
+brevo.sender.name=ifsc-edu
 
 # Spring Security
 spring.security.user.password=admin
