Add caching support and update database configuration for local development

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,52 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Production Database Configuration
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASS}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Local Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/projeto_integrador
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# HikariCP Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.transaction.flush_before_completion=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.transaction.flush_before_completion=false
 spring.jpa.properties.hibernate.connection.handling_mode=DELAYED_ACQUISITION_AND_HOLD
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
 # Thymeleaf
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
-## Email
-#spring.mail.host=smtp-relay.brevo.com
-#spring.mail.port=587
-#spring.mail.username=${BREVO_USERNAME}
-#spring.mail.password=${BREVO_SMTP_KEY}
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-#spring.mail.properties.mail.smtp.connectiontimeout=10000
-#spring.mail.properties.mail.smtp.timeout=10000
-#spring.mail.properties.mail.smtp.writetimeout=10000
+## Email production (Brevo SMTP)
 brevo.api.key=${BREVO_API_KEY}
 brevo.sender.email=jalmir.w15@aluno.ifsc.edu.br
 brevo.sender.name=ifsc-edu
 
 # Spring Security
 spring.security.user.password=admin
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
+
+# Logging
+logging.level.root=INFO
+logging.level.org.springframework=WARN
+logging.level.org.springframework.security=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=WARN
