--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Production Database Configuration
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASS}
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Local Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/projeto_integrador
-spring.datasource.username=postgres
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://localhost:5432/projeto_integrador
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
 
 # HikariCP Configuration
 spring.datasource.hikari.maximum-pool-size=10
