Add HTTPS configuration and security headers for improved application security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,14 @@ brevo.sender.name=ifsc-edu
 # Spring Security
 spring.security.user.password=admin
 
+# Server HTTPS Configuration for Railway
+server.port=8080
+server.servlet.context-path=/
+server.forward-headers-strategy=native
+server.tomcat.remote-ip-header=X-Forwarded-For
+server.tomcat.protocol-header=X-Forwarded-Proto
+server.tomcat.protocol-header-https-value=https
+
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework=WARN
