--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.password=admin
 
 # HikariCP Configuration
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.connection-test-query=SELECT 1
 
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
@@ -51,6 +49,8 @@ server.forward-headers-strategy=native
 server.tomcat.remote-ip-header=X-Forwarded-For
 server.tomcat.protocol-header=X-Forwarded-Proto
 server.tomcat.protocol-header-https-value=https
+server.tomcat.threads.max=25
+server.tomcat.threads.min-spare=5
 
 # Logging
 logging.level.root=INFO
